feat: Replace Vercel favicon with custom PNG and update meta links

--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arpit - AI/ML Data Scientist | Portfolio</title>
+    <title>Arpit - AI/ML Data Science | Portfolio</title>
     <meta name="description" content="Arpit is an AI/ML and Data Science expert skilled in Python, SQL, Power BI, and Tableau. Explore projects, certifications, and collaborate on data-driven solutions." />
     <meta name="author" content="Arpit" />
     <meta name="keywords" content="AI, Machine Learning, Data Science, Python, SQL, Power BI, Tableau, Data Analysis, Chandigarh University" />
-    <link rel="canonical" href="https://arpit-portfolio.lovable.app" />
+    
+    <!-- Canonical URL updated to your Vercel deployment -->
+    <link rel="canonical" href="https://arpit-bhuker.vercel.app/" /> 
 
-    <meta property="og:title" content="Arpit - AI/ML Data Scientist Portfolio" />
+    <!-- ADDED: Favicon link pointing to your 10353966.png file in the public folder -->
+    <link rel="icon" type="image/png" href="/10353966.png" />
+
+    <meta property="og:title" content="Arpit - AI/ML Data Science Portfolio" />
     <meta property="og:description" content="AI/ML and Data Science expert with expertise in Python, SQL, Power BI, and Tableau. Available for collaborations and opportunities." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://arpit-portfolio.lovable.app/og-image.jpg" />
+    <!-- Updated og:image to use relative path -->
+    <meta property="og:image" content="/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Arpit - AI/ML Data Scientist" />
+    <meta name="twitter:title" content="Arpit - AI/ML Data Science" />
     <meta name="twitter:description" content="AI/ML and Data Science expert with expertise in Python, SQL, Power BI, and Tableau" />
-    <meta name="twitter:image" content="https://arpit-portfolio.lovable.app/og-image.jpg" />
+    <!-- Updated twitter:image to use relative path -->
+    <meta name="twitter:image" content="/og-image.jpg" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
