--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Arpit Bhuker",
+        "url": "https://arpit-bhuker.vercel.app/",
+        "jobTitle": "AI & Machine Learning Engineer",
+        "sameAs": [
+          "https://www.linkedin.com/in/arpitbhuker/",
+          "https://github.com/arpitbhuker"
+        ]
+      }
+      </script>
+      
   </head>
 
   <body>
