--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="AI, Machine Learning, Data Science, Python, SQL, Power BI, Tableau, Data Analysis, Chandigarh University" />
     
     <!-- Canonical URL updated to your Vercel deployment -->
-    <link rel="canonical" href="https://arpit-bhuker.vercel.app/" /> 
+    <link rel="canonical" href="https://arpitbhuker.vercel.app/" /> 
 
     <!-- ADDED: Favicon link pointing to your 10353966.png file in the public folder -->
     <link rel="icon" type="image/png" href="/10353966.png" />
@@ -35,7 +35,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Arpit Bhuker",
-        "url": "https://arpit-bhuker.vercel.app/",
+        "url": "https://arpitbhuker.vercel.app/",
         "jobTitle": "AI & Machine Learning Engineer",
         "sameAs": [
           "https://www.linkedin.com/in/arpitbhuker/",
