added alternate name

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Arpit Bhuker",
+        "alternateName": "Arpit",
         "url": "https://arpitbhuker.vercel.app/",
-        "jobTitle": "AI & Machine Learning Engineer",
+        "jobTitle": "AI/ML | Data Science",
         "sameAs": [
           "https://www.linkedin.com/in/arpitbhuker/",
           "https://github.com/arpitbhuker"
